--- a/Kmove_7Team2/src/main/webapp/WEB-INF/web.xml
+++ b/Kmove_7Team2/src/main/webapp/WEB-INF/web.xml
@@ -1,6 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd" id="WebApp_ID" version="4.0">
+  
+  
+  
+  
+  
+  
   <display-name>Kmove_7Team2</display-name>
+  
+  
+  <listener>
+  <listener-class>com.dbcp.CM_DBCPInitListener</listener-class>
+  </listener>
+  
+  <context-param>
+  <param-name>poolConfig</param-name>
+  <param-value>
+  jdbcdriver=oracle.jdbc.driver.OracleDriver
+  jdbcUrl=jdbc:oracle:thin:@localhost:1521:xe
+  dbUser=System
+  dbPass=1217
+  validationQuery=select 1
+  minIdle=3
+  maxTotal=30
+  poolName=board
+  </param-value>
+  </context-param>
+  
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.jsp</welcome-file>
