--- a/Kmove_7Team2/src/main/webapp/WEB-INF/web.xml
+++ b/Kmove_7Team2/src/main/webapp/WEB-INF/web.xml
@@ -3,7 +3,7 @@
   
   <filter>
   <filter-name>encodingFilter</filter-name>
-  <filter-class>com.dbcp.CM_DBCPInitListener</filter-class>
+  <filter-class>com.dbcp.filter.CM_CharacterEncoding</filter-class>
   <init-param>
   <param-name>encoding</param-name>
   <param-value>utf-8</param-value>
@@ -13,9 +13,6 @@
   <filter-name>encodingFilter</filter-name>
   <url-pattern>/*</url-pattern>
   </filter-mapping>
-  
-  
-  
   
   <display-name>Kmove_7Team2</display-name>
   
@@ -34,7 +31,6 @@
   <servlet-name>ControllerUsingURI</servlet-name>
   <url-pattern>*.do</url-pattern>
   </servlet-mapping>
-  
   
   
   <listener>
