--- a/Kmove_7Team2/src/main/webapp/WEB-INF/CM_commandHandlerURI.properties
+++ b/Kmove_7Team2/src/main/webapp/WEB-INF/CM_commandHandlerURI.properties
@@ -2,3 +2,5 @@
 /login.do=com.command.Handler.LHU.CM_LoginHandler
 /empReg.do=com.command.Handler.SCE.CM_EmpRegistHandler
 /payRead.do=com.command.Handler.SDJ.CM_PayReadHandler
+/AllPay.do=com.command.Handler.PJS.CM_AllPayRead
+/monthPay.do=com.command.Handler.PJS.CM_MonthPay
