--- a/Kmove_7Team2/src/main/webapp/WEB-INF/CM_commandHandlerURI.properties
+++ b/Kmove_7Team2/src/main/webapp/WEB-INF/CM_commandHandlerURI.properties
@@ -1,6 +1,8 @@
 /join.do=com.command.Handler.LHU.CM_JoinHandler
 /login.do=com.command.Handler.LHU.CM_LoginHandler
 /empReg.do=com.command.Handler.SCE.CM_EmpRegistHandler
+/empList.do=com.command.Handler.SCE.CM_EmpListRead
 /payRead.do=com.command.Handler.SDJ.CM_PayReadHandler
+/payModify.do=com.command.Handler.SDJ.CM_PayModify
 /AllPay.do=com.command.Handler.PJS.CM_AllPayRead
 /monthPay.do=com.command.Handler.PJS.CM_MonthPay
